Bug 271467 - PowerDevil cannot control screen brightness using new /sys/class/backlight/intel_backlight interface
Summary: PowerDevil cannot control screen brightness using new /sys/class/backlight/in...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Frameworks and Libraries
Component: powermanagement (show other bugs)
Version: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-22 08:48 UTC by Hendy Irawan
Modified: 2011-09-30 21:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hendy Irawan 2011-04-22 08:48:48 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

Some laptops, such as my Lenovo IdeaPad Z360 uses a different way to adjust backlight using the /sys/class/backlight/intel_backlight interface, with its own kernel module. See:

https://launchpad.net/~kamalmostafa/+archive/linux-kamal-mjgbacklight

This new interface is already supported by gnome-power-manager, hence works well in GNOME.

However Solid/PowerDevil doesn't support it as of KDE SC 4.6.2, so controlling screen brightness using battery applet doesn't work.

Even in KDE, it is still possible to control screen backlight via console/script etc. for example:

echo 390 | sudo tee /sys/class/backlight/intel_backlight/brightness

Solid/PowerDevil should be updated to support this.

Reproducible: Always

Steps to Reproduce:
Use the affected laptops. Change brightness via Fn keys or battery applet.

Actual Results:  
No effect.

Expected Results:  
Brightness changes.
Comment 1 Alex Fiestas 2011-09-30 21:40:35 UTC
Git commit 63d38bdb6a98e3e74b24c2cd88233b7d24a2900f by Alex Fiestas.
Committed on 30/09/2011 at 23:32.
Pushed by afiestas into branch 'master'.

Added intel_backlight and radeon_bl, and priority changed

Apart from adding two new needed modules, I have modified the
priority of the modules prioritizing the GPU drivers, that's
because they usually know better the steps than the "laptop model"
one.

CCMAIL: lukas@kde.org
BUG: 271467
BUG: 265291

M  +5    -5    powerdevil/daemon/backends/upower/backlighthelper.cpp

http://commits.kde.org/kde-workspace/63d38bdb6a98e3e74b24c2cd88233b7d24a2900f
Comment 2 Alex Fiestas 2011-09-30 21:41:50 UTC
Git commit 5dc645016aa8aaa5ed3b5fde2a5d53405e3ce714 by Alex Fiestas.
Committed on 30/09/2011 at 23:32.
Pushed by afiestas into branch 'KDE/4.7'.

Added intel_backlight and radeon_bl, and priority changed

Apart from adding two new needed modules, I have modified the
priority of the modules prioritizing the GPU drivers, that's
because they usually know better the steps than the "laptop model"
one.

CCMAIL: lukas@kde.org
BUG: 271467
BUG: 265291
(cherry picked from commit 63d38bdb6a98e3e74b24c2cd88233b7d24a2900f)

M  +5    -5    powerdevil/daemon/backends/upower/backlighthelper.cpp

http://commits.kde.org/kde-workspace/5dc645016aa8aaa5ed3b5fde2a5d53405e3ce714