Added intel_backlight and radeon_bl, and priority changed

Apart from adding two new needed modules, I have modified the
priority of the modules prioritizing the GPU drivers, that's
because they usually know better the steps than the "laptop model"
one.

CCMAIL: lukas@kde.org
BUG: 271467
BUG: 265291