daemon/backends/upower/backlighthelper.cpp
@@ -34,11 +34,11 @@ void BacklightHelper::init()
 {
     // find the first existing device with backlight support
     QStringList interfaces;
-    interfaces << "asus_laptop" << "toshiba"
-               << "eeepc" << "thinkpad_screen" << "acpi_video0"
-               << "mbp_backlight" << "acpi_video1" << "apple_backlight"
-               << "fujitsu-laptop" << "samsung"
-               << "nv_backlight"  << "nvidia_backlight" << "dell_backlight" << "sony";
+    interfaces << "nv_backlight" << "intel_backlight" << "radeon_bl" << "mbp_backlight"
+               << "asus_laptop" << "toshiba" << "eeepc" << "thinkpad_screen" << "acpi_video1"
+               << "acpi_video0" << "apple_backlight" << "fujitsu-laptop" << "samsung"
+               << "nvidia_backlight" << "dell_backlight" << "sony"
+               ;
 
     QDir dir;
     foreach (const QString & interface, interfaces) {
